Updated Language File (Nederlands) thx to jaak

--- a/trunk/ressourcen/jd/languages/Nederlands.lng
+++ b/trunk/ressourcen/jd/languages/Nederlands.lng
@@ -1,8 +1,10 @@
-﻿﻿$translater$ = ChangeMe
+﻿$translater$ = GiaSoft
 $version$ = $Revision$
-action.passwordlist.name = Paswoord lijst bewerken
-﻿﻿addons.jdlowspeed.statusmessage.disabled = Lage Snelheid detectie uitschakelen
+﻿action.passwordlist.name = Paswoord lijst bewerken
+﻿﻿addons.jdgrowlnotification.menu.enable = Meldingen Activeren
+addons.jdlowspeed.statusmessage.disabled = Lage Snelheid detectie uitschakelen
 ﻿addons.jdlowspeed.statusmessage.enabled = Lage Snelheiddetectie ingeschakeld
+addons.jdshutdown.menu = Systeem na het Downloaden Afsluiten
 addons.jdshutdown.menu.disable = Na Download Systeem Afsluiten Deactiveren
 addons.jdshutdown.menu.enable = Na Download Systeem Afsluiten Activeren
 addons.jdshutdown.statusmessage.disabled = JDownloader zal het Systeem na het Downloaden NIET afsluiten.
@@ -150,6 +152,8 @@ gui.btn_save = Opslaan
 gui.btn_savetofile = Bestand opslaan
 gui.btn_select = Kiezen
 gui.btn_settings = Instellingen
+gui.btn_start = Start
+gui.btn_stop = Stop
 gui.btn_yes = Ja
 gui.captchawindow.askforinput = AUB Ingeven!
 gui.captchawindow.title = jAntiCaptcha actief!
@@ -306,12 +310,15 @@ gui.config.gui.autoPackageLimit = Limiet Auto. Pakketten-beheer.
 gui.config.gui.autopackagelimit = Limiet Auto. Pakketten-beheer.
 gui.config.gui.browser = Browser
 gui.config.gui.container.tab = Downloadlinks
+gui.config.gui.custom_browser = Browserpad
+gui.config.gui.custom_browser_param = Parameter %url (één parameter per lijn)
 gui.config.gui.disabledialogs = Bevestigingsdialoog uitschakelen
 gui.config.gui.disabletooltipps = ToolTips voor Downloadlijst uitschakelen
 gui.config.gui.extended = Uitgebreide Instellingen
 gui.config.gui.gui = Gebruikers-thema
 gui.config.gui.langeditMode = Taalbestand bewerkingsmodus
 gui.config.gui.language = Taal
+gui.config.gui.languagefileinfo = Momenteel Taalbestand: %s vertaalt van %s in Versie %s
 gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus controleren(beschikbaarheid)
 gui.config.gui.localeHelp = Ja ik wil jDownloader helpen verbeteren!
 gui.config.gui.look.tab = Aanwijzing & Bediening
@@ -319,7 +326,13 @@ gui.config.gui.plaf = Style(Opnieuw Opstarten)
 gui.config.gui.showfengshui = Altijd de gavanceerde Configuratie openen.
 gui.config.gui.showsplash = Splashscreen bij opstarten tonen
 gui.config.gui.soundtheme = Geluidsthema
+gui.config.gui.testbrowser = Test browser
+gui.config.gui.testbrowser.error = Browser-Start mislukt: %s
+gui.config.gui.testbrowser.message = JDownloader probeert nu http://jdownloader.org met de Browser te openen.
 gui.config.gui.theme = Themas
+gui.config.gui.use_custom_browser = Gebruik gebruiker gedefinieerde browser
+gui.config.hjsplit.overwrite = Overschrijf bestaande Bestanden
+gui.config.hjsplit.remove_merged = Wis het Archief na het Samenvoegen
 gui.config.httpreconnect.connection = Connectieopbouw
 gui.config.httpreconnect.connectpostparameter = POST Parameter voor Connectieopbouw
 gui.config.httpreconnect.connectrequestproperties = Benodigde Parameters voor een Connectieopbouw
@@ -361,6 +374,14 @@ gui.config.jac.column.use = Gebruiken
 gui.config.jac.name = jAntiCaptcha
 gui.config.jac.status.auto = Automatische Herkenning
 gui.config.jac.status.noauto = Manuelle Ingave
+gui.config.jdrr.close = Sluiten
+gui.config.jdrr.infolable = <span color=\"#4682B4\">Controleer het IP-Adres van de Router en druk op Start
+gui.config.jdrr.popup.title = JDRRPopup
+gui.config.jdrr.reconnectfaild = Herconnecteren is mislukt
+gui.config.jdrr.savereconnect = De Herconnctie was geslaagd Wilt U nu opslaan?
+gui.config.jdrr.title = Herconnect Recorder
+gui.config.jdshutdown.forceshutdown = Afsluiten Forceren (Niet voor alle OS)
+gui.config.jdshutdown.standby = Standby (Niet voor alle OS)
 gui.config.links.lblDev = Ontwikkelaar
 gui.config.links.lblSupport = Ondersteuning
 gui.config.links.lblTools = Bijkomende Gereedschappen
@@ -490,6 +511,7 @@ gui.config.unrar.activate = Activeren
 gui.config.unrar.ask_path = Vragen naar onbekende Paswoorden?
 gui.config.unrar.autofoldercount = uitpakken in een nieuwe map als er meer zijn dan X bestanden (0 = uitzetten)
 gui.config.unrar.cmd = UnRAR command
+gui.config.unrar.deep_extract = Diep Uitpakken
 gui.config.unrar.delete = Uitgepakte Bestanden wissen
 gui.config.unrar.deleteinfofile = Info-Data na geslaagd uitpakken wissen
 gui.config.unrar.deletemergedfiles = Bestandsdelen na samenvoegen wissen
@@ -506,8 +528,10 @@ gui.config.unrar.passwordlist.btn_save.mnem = s
 gui.config.unrar.passwordlist.btn_save.name = Opslaan
 gui.config.unrar.path = Uitpakken in
 gui.config.unrar.remove_after_extract = Archief wissen na geslaagd Uitpakken?
+gui.config.unrar.remove_infofile = Wis Info-bestand na het Uitpakken
 gui.config.unrar.subpath = Subfolder
 gui.config.unrar.thread = Download eerst na het uitpakken voortzetten
+gui.config.unrar.use_extractto = Gebruik aangepaste pad voor uitpakken
 gui.config.unrar.use_subpath = Gebruik Subfolder
 gui.config.unrar.usehjmerge = HJSplit-Archieven automatisch samenvoegen
 gui.config.webupdate.name = Webupdate
@@ -569,6 +593,11 @@ gui.fengshuiconfig.general.tooltip = U kunt hier uw Doelmap en Taal instellen
 gui.fengshuiconfig.languages.restartwarning = Om van taal te veranderen moet jDownloader herstart worden
 gui.fengshuiconfig.plugin.host.tooltip = <html>Als U een Premiumaccount heeft kunt U hier uw login en <br> paswoord ingegeven
 gui.fengshuiconfig.reconnect.tooltip = <html> Soms is het nodig om U ip te veranderen via een herconnectie
+gui.fengshuiconfig.routerip = Router-IP
+gui.fengshuiconfig.routername = Routernaam
+gui.fengshuiconfig.routerpassword = Paswoord
+gui.fengshuiconfig.testsettings = Instellingen testen
+gui.fengshuiconfig.username = Gebruikersnaam
 gui.fengshuiconfig.wikiurl = http://wiki.jdownloader.org/index.php?title=DE:fengshui:
 gui.frame.packageinfo.entrycomment = Commentaar
 gui.frame.packageinfo.entrydldirectory = Downloadmap
@@ -794,6 +823,10 @@ gui.menu.action.move_down.desc = Verplaats de geselecteerde ingaven één lijn o
 gui.menu.action.move_down.name = Naar beneden verplaatsen
 gui.menu.action.move_up.desc = Verplaats de geselecteerde ingaven één lijn omhoog
 gui.menu.action.move_up.name = Naar boven verplaatsen
+gui.menu.action.optconfig.accel = CTRL+Alt+O
+gui.menu.action.optconfig.desc = Addon-manager starten
+gui.menu.action.optconfig.mnem = O
+gui.menu.action.optconfig.name = Add-on Instellingen
 gui.menu.action.passwordlist.accel = F3
 gui.menu.action.passwordlist.desc = Toont de Paswoordlijsteditor
 gui.menu.action.passwordlist.mnem = b
@@ -806,11 +839,17 @@ gui.menu.action.reconnect.accel = CTRL+R
 gui.menu.action.reconnect.desc = Herconnectie uitvoeren
 gui.menu.action.reconnect.mnem = R
 gui.menu.action.reconnect.name = Herconnctie uitvoeren
+gui.menu.action.remove.links.accel = -
 gui.menu.action.remove.links.desc = Verwijder Afgewerkte Downloads
 gui.menu.action.remove.links.name = Verwijder Afgewerkte Downloads
+gui.menu.action.remove.links.mnem = -
+gui.menu.action.remove.packages.accel = -
 gui.menu.action.remove.packages.desc = Verwijder Afgewerkte Pakketten
+gui.menu.action.remove.packages.mnem = -
 gui.menu.action.remove.packages.name = Verwijder Afgewerkte Pakketten
+gui.menu.action.restart.accel = -
 gui.menu.action.restart.desc = JDownloader herstarten
+gui.menu.action.restart.mnem = -
 gui.menu.action.restart.name = Herstarten
 gui.menu.action.save.accel = CTRL+S
 gui.menu.action.save.desc = Als DLC opslaan
@@ -1070,6 +1109,7 @@ interaction.liveheader.progress.2_ip = IP
 interaction.liveheader.progress.3_step = Stap
 interaction.liveheader.progress.4_step = Stap %s
 interaction.liveheader.progress.5_ipcheck = IP Controleren
+interaction.liveheader.progress.5_ipcheck_emergency = (IPCHECK NOODGEVAL)HTTPLiveHeader %s / %s
 interaction.liveheader.progress.5_wait = Op Router/Modem wachten
 interaction.packagemanager.name = Pakketten actualiseren
 interaction.packagemanager.progress.loadpackages = Laad Pakketlijsten
@@ -1193,6 +1233,7 @@ modules.packagemanager.loadednewpackage.more = Verdere Info & Installatie Instru
 modules.packagemanager.loadednewpackage.title = Pakket Update geïnstalleerd
 modules.packagemanager.packagename = JD-Update
 modules.reconnect.pleaseselect = A.U.B. een methode uitkiezen:
+modules.reconnect.rr = Herconnect opnemen
 modules.reconnect.testreconnect = Test Herconnectie
 modules.reconnect.types.batch = Batch
 ﻿modules.reconnect.types.clr = CLR Script
@@ -1221,6 +1262,7 @@ plugins.container.exit = Afgesloten. %s Links gevonden
 plugins.container.exit.error = Pakket-Fout: %s
 plugins.container.found = Verwerking %s Links
 plugins.container.open = Container Openen
+plugins.decrypt.brazil-series.com1 = Download Formaat: Enkel Avi zonder Ondertitels
 plugins.decrypt.cryptitcom.password = Map is met paswoord beveiligd. Paswoord ingeven:
 plugins.decrypt.dlcxlice.net = Xlice-DLC geldigheid is verlopen. Xlicemap openen?
 plugins.decrypt.general.captchacodewrong = Captcha Code foutmelding
@@ -1254,12 +1296,17 @@ plugins.errors.pluginerror = Plugin Fout. Informeer Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grens bereikt
 plugins.errors.wrongpassword = Paswoord fout
 plugins.host.enterlinkpassword = AUB Link paswoord ingeven
+plugins.host.fastload.errors = Browser verkeerd geconfigureerd
 plugins.host.fastload.getticketmsg = HaalFastLoad-Ticket!
+plugins.host.fastload.prepare = Wacht op link confirmatie
 plugins.host.fastload.overload.long = Fast-load.net Overladen!. Download met volledige snelheid enkel via browser mogelijk
 plugins.host.fastload.overload.short = Fast-load.net Overladen
+plugins.host.fastload.ticketmessage = Koop U zich een Fastloadspeedticket om de snelheid naar 300kb/s op te voeren
+plugins.host.fastload.wait_ticketmessage = Wachten op Speedticket
 plugins.host.gigasize.freeaccount.pass = Paswoord
 plugins.host.gigasize.freeaccount.use = FreeAccount gebruiken
 plugins.host.gigasize.freeaccount.user = eMail
+plugins.host.httpallgemein.disable = Plugin deactiveren
 plugins.host.imagefap.imageerror = Beeld foutmelding
 plugins.host.meinupload.serverdefect = Service niet beschikbaar
 plugins.host.netload.try2SimultanDownloads = Probeer 2 Bestanden gelijktijdig te downloaden
@@ -1283,6 +1330,7 @@ plugins.host.premium.user = Gebruiker
 plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = Downloadsessie verlopen. Probeer opnieuw.
 plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = Bestand niet gevonden. Controleer je downloadlink.
 plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = De server, waarop het bestand is opgeslagen, is offline. Probeer later opnieuw.
+plugins.host.rapidshare.errors.8da4051e59062d67a39a7e10cc026831 = U heeft voor vandaag uw limiet bereikt.
 plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Dit bestand is illegaal en geblokkeerd. Het Downloaden van dit bestand is door Rapidshare verboden.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB limiet bereikt
 plugins.host.sharebaseto.servererror = Service niet beschikbaar
@@ -1349,6 +1397,7 @@ plugins.menu.accounts = Accounts
 plugins.menu.configs = Configuratie
 plugins.menu.enable_premium = Activeer Account
 plugins.menu.fastload = Haal Freeticket
+plugins.menu.fastload_refresh = Alle Tickets Actualiseren
 plugins.menu.noaccountsyet = Geen accounts ingesteld
 plugins.menu.premiuminfo = Ophalen Accountinfo
 plugins.netload.downloadpassword_question = Paswoordbeschermd. Geef Paswoord in voor %s
@@ -1360,6 +1409,10 @@ plugins.optional.folderwatch.name = FolderWatch
 plugins.optional.folderwatch.waittime = Wachttijd
 plugins.optional.getter.name = Getter
 plugins.optional.getter.port = Poort:
+plugins.optional.hjsplit.filefilter = HJSPLIT-Startvolumes
+plugins.optional.hjsplit.menu.config = Instellingen
+plugins.optional.hjsplit.menu.extract.singlefils = Archieven samenvoegen
+plugins.optional.hjsplit.menu.toggle = Activeren
 plugins.optional.httpliveheaderscripter.action.end = Skripter verlaten
 plugins.optional.httpliveheaderscripter.action.start = Start Scripter
 plugins.optional.httpliveheaderscripter.gui.avefile = Opslaan
@@ -1401,6 +1454,10 @@ plugins.optional.jdchat.menu.windowstatus = Chat-venster
 plugins.optional.jdchat.name = JD Chat
 plugins.optional.jdchat.performonstart = Commando na verbinding uitvoeren
 plugins.optional.jdchat.user = Bijnaam
+plugins.optional.jdgrowlnotification.name = JDGrowlNotification
+plugins.optional.jdhjsplit.linkmenu.merge = Samenvoegen
+plugins.optional.jdhjsplit.linkmenu.package.merge = Pakket samenvoegen
+plugins.optional.jdhjsplit.name = JD-HJMerge
 plugins.optional.jdlighttray.minimizetotray = Minimalizeer naar tray
 plugins.optional.jdlighttray.name = JDLightTrayIcon
 plugins.optional.jdlighttray.startminimized = Minimaliseerd starten
@@ -1414,7 +1471,10 @@ plugins.optional.jdshutdown.name = JDShutdown
 plugins.optional.jdunrar.askforpassword = Paswoord voor %s?
 plugins.optional.jdunrar.config.advanced = Geavanceerde instellingen
 plugins.optional.jdunrar.config.passwordlist = Lijst met alle Paswoorden. Eén paswoord per Regel
+plugins.optional.jdunrar.config.passwordlist.import = Oude Paswoordlijsten mportieren
+plugins.optional.jdunrar.config.passwordlist.import.message = Oude Paswoordlijsen zeker importeren?
 plugins.optional.jdunrar.config.passwordtab = Paswoord Lijst
+plugins.optional.jdunrar.filefilter = RAR-Startvolumes
 plugins.optional.jdunrar.linkmenu.extract = Uitpakken
 plugins.optional.jdunrar.linkmenu.openextract = Open Lijst
 plugins.optional.jdunrar.linkmenu.package.extract = Pakket uitpakken
@@ -1426,6 +1486,7 @@ plugins.optional.jdunrar.menu.queue.extract = Uitpakken %s
 plugins.optional.jdunrar.menu.queue.start = Start Wachtrij
 plugins.optional.jdunrar.menu.toggle = Activeren
 plugins.optional.jdunrar.name = JD-Unrar
+plugins.optional.jdunrar.progress.extractfile = Uitpakken %s
 plugins.optional.langfileeditor.addkey = Sleutel toevoegen
 plugins.optional.langfileeditor.adoptdefaults = Standard waarde(n) overnemen
 plugins.optional.langfileeditor.adoptdefaults.missing = Standard waarde(n) voor ontbrekende Inschrijvingen overnemen
@@ -1438,6 +1499,8 @@ plugins.optional.langfileeditor.close = Sluiten
 plugins.optional.langfileeditor.colorize = Inkleuren
 plugins.optional.langfileeditor.colorizemissing = Ontbrekende Inschrijvingen Inkleuren
 plugins.optional.langfileeditor.colorizeold = Oude Inschrijvingen Inkleuren
+plugins.optional.langfileeditor.continuesearch = Verder zoeken
+plugins.optional.langfileeditor.deletekeys = Sleutel(s) Wissen
 plugins.optional.langfileeditor.deleteselectedkeys = Verwijder geselecteerde Sleutel(s)
 plugins.optional.langfileeditor.download = Download SourceCode
 plugins.optional.langfileeditor.downloadsource = De Sourcecode kan verkregen worden via SVN.\Das SVN repository ist %s\nKlik OK om het te openen
@@ -1455,10 +1518,12 @@ plugins.optional.langfileeditor.keychart = Sleuteloverzicht
 plugins.optional.langfileeditor.keychart.done = Klaar
 plugins.optional.langfileeditor.keychart.missing = Ontbrekend
 plugins.optional.langfileeditor.keychart.old = Vermoederlijk verouderd
+plugins.optional.langfileeditor.keys = Sleutels
 plugins.optional.langfileeditor.languagefile = Taalbestand:
+plugins.optional.langfileeditor.languagefileinfo = <Informatie Taalbestand>
 plugins.optional.langfileeditor.languagefilevalue = Taalbestand waarde
 plugins.optional.langfileeditor.name = JDLangFileEditor
-plugins.optional.langfileeditor.new = Niewu
+plugins.optional.langfileeditor.new = Nieuw
 plugins.optional.langfileeditor.ok = OK
 plugins.optional.langfileeditor.patternentry = <Ingave komt overeen met patroon>
 plugins.optional.langfileeditor.pickmissingcolor = Kies Kleur voor Ontbrekende Inschrijvingen
@@ -1470,12 +1535,15 @@ plugins.optional.langfileeditor.save.error.title = Error!
 plugins.optional.langfileeditor.save.success.message = Taalbestand succesvol opgeslagen!
 plugins.optional.langfileeditor.save.success.title = Opslaan was succesvol!
 plugins.optional.langfileeditor.saveas = Opslaan als
+plugins.optional.langfileeditor.search = Zoeken
+plugins.optional.langfileeditor.searchfor = Naar String zoeken: (Startpositie is de eerst geselecteerde rij)
 plugins.optional.langfileeditor.secondkey = Tweede Sleutel
 plugins.optional.langfileeditor.selectmissing = Selecteer Ontbrekende Inschrijvingen
 plugins.optional.langfileeditor.selectold = Selecteer Oude Inschrijvingen
 plugins.optional.langfileeditor.show_gui = Start Taal editor
 plugins.optional.langfileeditor.showdupes = Toon Dubbele Inschrijvingen
 plugins.optional.langfileeditor.sortentries = Sorteer Inschrijvingen
+plugins.optional.langfileeditor.sourcefile = Bron (Bestand):
 plugins.optional.langfileeditor.sourcefolder = Source Folder:
 plugins.optional.langfileeditor.sourcevalue = Bron Waarde
 plugins.optional.langfileeditor.string = String
@@ -1617,6 +1685,8 @@ plugins.youtube.convertdialog.keepsettings = Bewaar instellingen
 plugins.youtube.convertdialog.mp3 = Audio (MP3)
 plugins.youtube.convertdialog.mp4 = Video (MP4)
 plugins.youtube.convertdialog.title = Youtube.com Bestandsformaat
+routerinfocollector.dialog.msg = <b>Om de automatische Router Herkenning te verbeteren, verzamelen we Router informaties!</b><br>Als U er mee eens bent om uw Router Informatie naar onze Server door te sturen, bevestig dan met ja!
+routerinfocollector.dialog.title = Help ons de Router Herkenning te verbeteren
 showcaptcha.choose.file = Kies een Fotobestand uit
 showcaptcha.chooser.title = jDownloader :: Toon Captcha
 sys.ask.rlyclose = Wilt U jDownloader werkelijk afsluiten?
@@ -1624,6 +1694,7 @@ sys.confirm.dorestart = Deze instellingen benodigen een nieuwstart. Nieuwstart n
 sys.dlc.error_version = DLC encryptie mislukt. Wees zeker dat je de laatste versie van jDownloader gebruikt.
 sys.dlc.success = DLC encryptie succesvol. Uitpakken testen?
 sys.header.jdownloader = jDownloader
+sys.linklist.addnew.prepare = Downloadlink Voorbereiden
 sys.message.welcome = Bezoek ons op http://jdownloader.ath.cx
 sys.warning.dlcerror = Defecte DLC Container
 sys.warning.dlcerror.server = <b>Heb je de laatste versie van JD geïnstalleerd?</b> <br>Server melden:
@@ -1641,6 +1712,9 @@ sys.warning.linklist.incompatible = Linklijst incompatibel. \r\nOpslag verworpen
 sys.warning.newmessage = Nieuw Systeembericht
 system.dialogs.update = Updates beschikbaar
 system.dialogs.update.message = <font size=\"2\" face=\"Verdana
+system.download.docrc2 = CRC-Check loopt (%s)
+system.download.docrc2.failed = CRC-Check mislukt (%s)
+system.download.docrc2.success = CRC-Check OK (%s)
 system.download.errors.couldnotoverwrite = Kon bestaande bestanden niet overschrijven
 system.download.errors.couldnotoverwritejdu = Update: Download Fout
 system.download.errors.couldnotrename = Kon Deel-Bestand niet hernoemen
